--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "todo-list",
+  "name": "vue-app",
   "version": "1.0.0",
-  "description": "todo list in vue",
-  "author": "zuizim <270664501@qq.com>",
+  "description": "vue app",
+  "author": "Owais Ali",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-good-table": "^2.21.11",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
